[gd_scene load_steps=2 format=3 uid="uid://selection_popup_001"]

[ext_resource type="Script" path="res://scripts/ui/SelectionPopup.gd" id="1_popup"]

[node name="SelectionPopup" type="Control"]
anchors_preset = 0
offset_right = 220.0
offset_bottom = 200.0
script = ExtResource("1_popup")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 220.0
offset_bottom = 200.0

[node name="DragonNameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 18
text = "Dragon Name"
horizontal_alignment = 1

[node name="GenotypeLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 210.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 14
text = "Genotype: Ff"
horizontal_alignment = 1

[node name="PhenotypeLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 62.0
offset_right = 210.0
offset_bottom = 82.0
theme_override_font_sizes/font_size = 14
text = "Phenotype: ðŸ”¥ Fire-Breather"
horizontal_alignment = 1

[node name="ParentAButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 95.0
offset_right = 200.0
offset_bottom = 125.0
text = "Set as Parent A"

[node name="ParentBButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 130.0
offset_right = 200.0
offset_bottom = 160.0
text = "Set as Parent B"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 60.0
offset_top = 165.0
offset_right = 160.0
offset_bottom = 190.0
text = "Cancel"
